updated the css to fix the gap issue when logged in

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1172,4 +1172,8 @@ btn+btn
 		transition: 0.5s cubic-bezier(0.19, 1, 0.19, 1);
 		margin-top: 117px;
 	}
+
+	.admin-bar #asuHeader {
+		top: 32px;
+	}
 }
